Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24902

Opening CMake projects gets stuck in QFutureInterface::waitForFinished (built with Qt6)

XMLWordPrintable

    • 6d7e5eb8d17194b124c8986d670ff96fda96f0f3 (qt-creator/qt-creator/4.14)

      Open dummy cmake project in Qt Creator built with Qt6. Qt Creator locks up.

      Call graph:
          2620 Thread_8430859   DispatchQueue_1: com.apple.main-thread  (serial)
          + 2620 start  (in libdyld.dylib) + 1  [0x7fff6f21dcc9]
          +   2620 ???  (in Qt Creator)  load address 0x10e348000 + 0xb0b5  [0x10e3530b5]
          +     2620 QCoreApplication::exec()  (in QtCore) + 130  [0x10f79c0e2]
          +       2620 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>)  (in QtCore) + 382  [0x10f7a7aae]
          +         2620 ???  (in libqcocoa.dylib)  load address 0x111e3f000 + 0x14ca5  [0x111e53ca5]
          +           2620 -[NSApplication run]  (in AppKit) + 658  [0x7fff3240e58e]
          +             2620 -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:]  (in AppKit) + 1352  [0x7fff3241c880]
          +               2620 _DPSNextEvent  (in AppKit) + 883  [0x7fff3241e039]
          +                 2620 _BlockUntilNextEventMatchingListInModeWithFilter  (in HIToolbox) + 64  [0x7fff33dd8579]
          +                   2620 ReceiveNextEventCommon  (in HIToolbox) + 584  [0x7fff33dd87d5]
          +                     2620 RunCurrentEventLoopInMode  (in HIToolbox) + 292  [0x7fff33dd8abd]
          +                       2620 CFRunLoopRunSpecific  (in CoreFoundation) + 462  [0x7fff351abe3e]
          +                         2620 __CFRunLoopRun  (in CoreFoundation) + 927  [0x7fff351ac83a]
          +                           2620 __CFRunLoopDoSources0  (in CoreFoundation) + 209  [0x7fff351adb0b]
          +                             2620 __CFRunLoopDoSource0  (in CoreFoundation) + 103  [0x7fff351adcf1]
          +                               2620 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__  (in CoreFoundation) + 17  [0x7fff351add52]
          +                                 2620 ???  (in libqcocoa.dylib)  load address 0x111e3f000 + 0x161db  [0x111e551db]
          +                                   2620 ???  (in libqcocoa.dylib)  load address 0x111e3f000 + 0x157b1  [0x111e547b1]
          +                                     2620 QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*)  (in QtCore) + 415  [0x10f79ca2f]
          +                                       2620 QCoreApplication::notifyInternal2(QObject*, QEvent*)  (in QtCore) + 215  [0x10f79bac7]
          +                                         2620 QApplication::notify(QObject*, QEvent*)  (in QtWidgets) + 509  [0x10e7c764d]
          +                                           2620 QApplicationPrivate::notify_helper(QObject*, QEvent*)  (in QtWidgets) + 254  [0x10e7c644e]
          +                                             2620 QFutureWatcherBase::event(QEvent*)  (in QtCore) + 24  [0x10f926aa8]
          +                                               2620 ???  (in QtCore)  load address 0x10f6fd000 + 0x2f7b55  [0x10f9f4b55]
          +                                                 2620 ???  (in libCMakeProjectManager.dylib)  load address 0x115867000 + 0xd3dfe  [0x11593adfe]
          +                                                   2620 ???  (in QtCore)  load address 0x10f6fd000 + 0x2f7b55  [0x10f9f4b55]
          +                                                     2620 ???  (in libCMakeProjectManager.dylib)  load address 0x115867000 + 0x207cc  [0x1158877cc]
          +                                                       2620 ???  (in libCMakeProjectManager.dylib)  load address 0x115867000 + 0x26f77  [0x11588df77]
          +                                                         2620 ???  (in libCMakeProjectManager.dylib)  load address 0x115867000 + 0x295bc  [0x1158905bc]
          +                                                           2620 CppTools::CppProjectUpdater::update(ProjectExplorer::ProjectUpdateInfo const&)  (in libCppTools.dylib) + 61  [0x1147a867d]
          +                                                             2620 QFutureInterfaceBase::waitForFinished()  (in QtCore) + 206  [0x10f9249ee]
          +                                                               2620 QWaitCondition::wait(QMutex*, QDeadlineTimer)  (in QtCore) + 93  [0x10f9222bd]
          +                                                                 2620 ???  (in QtCore)  load address 0x10f6fd000 + 0x22533b  [0x10f92233b]
          +                                                                   2620 _pthread_cond_wait  (in libsystem_pthread.dylib) + 698  [0x7fff6f422425]
          +                                                                     2620 __psynch_cvwait  (in libsystem_kernel.dylib) + 10  [0x7fff6f361882]
      

        For Gerrit Dashboard: QTCREATORBUG-24902
        # Subject Branch Project Status CR V

            con Eike Ziller
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes